force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c.object-meta.xml
<CustomObject>
    <description>Opportunities (or proposals) that are related to the patient referral.</description>
    <label>Patient Referral Opportunity</label>
    <nameField>
        <label>Patient Referral Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patient Referral Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>