force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/fields/ucinn_ascendv2__External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>