force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Patient_Referral_Opps_v1_Opp</relationshipName>
    <type>Lookup</type>
</CustomField>