force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/fields/ucinn_ascendv2__Patient_Referral__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient_Referral__c</fullName>
    <label>Patient Referral</label>
    <referenceTo>ucinn_ascendv2__Patient_Referral_v1__c</referenceTo>
    <relationshipName>Patient_Referral_Opps_v1_Patient_Ref</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>