force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/fields/ucinn_ascendv2__Patient_Referral_Opp_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Patient_Referral_Opp_Name_Auto_Number__c</fullName>
    <displayFormat>PRO-{0000000}</displayFormat>
    <label>Patient Referral Opp Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>