force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/fields/ucinn_ascendv2__Work_Plan_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Work_Plan_Percentage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Plan Percentage</label>
    <referenceTo>ucinn_ascendv2__Work_Plan_Percentage__c</referenceTo>
    <relationshipName>Patient_Referral_Opps_v1_Work_Plan_Pct</relationshipName>
    <type>Lookup</type>
</CustomField>