force-app/main/default/objects/ucinn_ascendv2__Patient_Referral_Opportunity_v1__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>